smithy-model/src/test/resources/software/amazon/smithy/model/loader/valid/2.1/inline-collections.smithy
$version: "2.1"

namespace smithy.example

structure MyStructure {
    strings: [String]
    tags: {String: String}
    nested: {String: [Integer]}
}
