smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/operations/newline-missing-after-output.smithy
// Parse error at line 6, column 26 near `errors`: Expected a line break | Model
$version: "2.0"
namespace smithy.example

operation GetFoo {
    output: GetFooOutput errors: []
}
